[feature] Project Preview Page https://github.com/lighthought/app-maker/issues/20 1. 后端 cors.go 修复 CORS导致无法加载子域名的问题； 2. 修复后台响应模型未返回 preview_url 导致前端在项目完成后还是没法展示预览界面的问题； 3. 修改后端 traefik 配置、模板中的前后端 traefik 配置，解决 app-maker 的 websocket 和 API 请求发给了其他应用的后台的问题； 4. 前端加入 桌面、平板、移动端设备切换，复制、分享、刷新、新标签页打开等操作按钮。 5. 前端数据模型统一字段名为 preview_url。 调通前端预览已完成状态项目功能。
