# backend/docs/swagger.json
@@ -1916,6 +1916,10 @@
                     "type": "string",
                     "example": "项目名称"
                 },
+                "preview_url": {
+                    "type": "string",
+                    "example": "http://guid.app-maker.localhost"
+                },
                 "project_path": {
                     "type": "string",
                     "example": "/path/to/project"
